[gd_scene load_steps=29 format=2]

[ext_resource path="res://Mob.gd" type="Script" id=1]
[ext_resource path="res://art/enemy-flying-1.png" type="Texture" id=2]
[ext_resource path="res://art/enemy-flying-2.png" type="Texture" id=3]
[ext_resource path="res://art/enemy-walking-1.png" type="Texture" id=4]
[ext_resource path="res://art/enemy-walking-2.png" type="Texture" id=5]
[ext_resource path="res://art/enemy-swimming-1.png" type="Texture" id=6]
[ext_resource path="res://art/enemy-swimming-2.png" type="Texture" id=7]
[ext_resource path="res://art/explosion.png" type="Texture" id=8]
[ext_resource path="res://art/explosion.ogg" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 576, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 768, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 384, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 576, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 768, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 384, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 576, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 768, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 576, 192, 192 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "explosion",
"speed": 50.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "fly",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "swim",
"speed": 4.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 35.2706
height = 23.3281

[node name="Mob" type="RigidBody2D" groups=["mobs"]]
collision_mask = 0
gravity_scale = 0.0
contact_monitor = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="explosion" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 23 )
animation = "explosion"

[node name="explosionSound" type="AudioStreamPlayer2D" parent="explosion"]
stream = ExtResource( 9 )
bus = "SFX"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="animation_finished" from="explosion" to="." method="_on_explosion_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
